tests/spec/emit/snapshots/slice_range_exclusive.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test(arr: Slice<int>) -> Slice<int> {
    arr[1..4]
  }
---
package main

func test(arr []int) []int {
	return arr[1:4:4]
}
