tests/spec/emit/snapshots/slice_range_from.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test(arr: Slice<int>) -> Slice<int> {
    arr[2..]
  }
---
package main

func test(arr []int) []int {
	len_1 := len(arr)
	return arr[2:len_1:len_1]
}
