tests/spec/emit/snapshots/slice_range_full.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test(arr: Slice<int>) -> Slice<int> {
    arr[..]
  }
---
package main

func test(arr []int) []int {
	len_1 := len(arr)
	return arr[:len_1:len_1]
}
