tests/spec/emit/snapshots/slice_range_to.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test(arr: Slice<int>) -> Slice<int> {
    arr[..3]
  }
---
package main

func test(arr []int) []int {
	return arr[:3:3]
}
