tests/spec/emit/snapshots/slice_range_value_eval_order.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn make_items() -> Slice<int> {
    fmt.Println("receiver")
    [10, 20, 30, 40]
  }
  
  fn make_range() -> Range<int> {
    fmt.Println("range")
    1..3
  }
  
  fn main() {
    let xs = make_items()[make_range()]
    fmt.Println(xs.length())
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func makeItems() []int {
	fmt.Println("receiver")
	return []int{10, 20, 30, 40}
}

func makeRange() lisette.Range[int] {
	fmt.Println("range")
	return lisette.Range[int]{
		Start: 1,
		End:   3,
	}
}

func main() {
	base := makeItems()
	range_1 := makeRange()
	xs := base[range_1.Start:range_1.End:range_1.End]
	fmt.Println(len(xs))
}
